--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "@mrizki/pouchdb-core",
+  "name": "@qsi/pouchdb-core",
   "version": "6.4.3",
   "description": "The core of PouchDB as a standalone package.",
   "main": "./lib/index.js",
   "keywords": [],
   "author": "Dale Harvey <dale@arandomurl.com>",
   "license": "Apache-2.0",
-  "repository": "https://github.com/pouchdb/pouchdb",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pouchdb/pouchdb.git"
+  },
   "jsnext:main": "./lib/index.es.js",
   "dependencies": {
     "argsarray": "0.0.1",
@@ -24,5 +27,16 @@
     "lib",
     "dist",
     "tonic-example.js"
-  ]
+  ],
+  "bugs": {
+    "url": "https://github.com/pouchdb/pouchdb/issues"
+  },
+  "homepage": "https://github.com/pouchdb/pouchdb#readme",
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
 }
